Format update for all pages

--- a/commentary/category.html
+++ b/commentary/category.html
@@ -264,12 +264,12 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Commentary</a>
                                 </div>
-                                <h4 class="font-pt">【观点】就算是“土猪”，也可以仰望星空</h4>
+                                <h4 class="font-pt">就算是“土猪”，也可以仰望星空</h4>
                                 <p class="gazette-post-date">2021年6月9日</p>
                                 <!-- Post Thumbnail -->
                                 <div class="blog-post-thumbnail my-5">
                                     <img src="img/41_Zhang_Xi_Feng_In_Grade_12.jpg"
-                                        style="max-height: 250px; width: auto;" alt="【观点】就算是“土猪”，也可以仰望星空">
+                                        style="max-height: 250px; width: auto;" alt="就算是“土猪”，也可以仰望星空">
                                 </div>
                                 <!-- Post Excerpt -->
                                 <p>前两天，我收到麦迪讯社长小袁的约稿邀请， 他问我作为一名女性如何看待最近来自衡水中学张锡峰同学在网络上颇有争议的一段演讲——
@@ -293,12 +293,12 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Commentary</a>
                                 </div>
-                                <h4 class="font-pt">【社论】年轻人选择“躺平”有罪否？</h4>
+                                <h4 class="font-pt">年轻人选择“躺平”有罪否？</h4>
                                 <p class="gazette-post-date">2021年5月31日</p>
                                 <!-- Post Thumbnail -->
                                 <div class="blog-post-thumbnail my-5">
                                     <img src="img/LyingFlat_Stakhanov.png" style="max-height: 250px; width: auto;"
-                                        alt="【社论】年轻人选择“躺平”有罪否？">
+                                        alt="年轻人选择“躺平”有罪否？">
                                 </div>
                                 <!-- Post Excerpt -->
                                 <p>最近，一则叫《躺平即是正义》的帖子在网上风靡， 文章记载了一个年轻人选择无工作的自由生活的故事。他说自己每月的花销控制在200块以内，
@@ -320,12 +320,12 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Commentary</a>
                                 </div>
-                                <h4 class="font-pt">【社论】从“土猪拱白菜”看什么是阶级</h4>
+                                <h4 class="font-pt">从“土猪拱白菜”看什么是阶级</h4>
                                 <p class="gazette-post-date">2021年7月5日</p>
                                 <!-- Post Thumbnail -->
                                 <div class="blog-post-thumbnail my-5">
                                     <img src="img/45_Zhang_Xi_Feng.png" style="max-height: 250px; width: auto;"
-                                        alt="【社论】从“土猪拱白菜”看什么是阶级">
+                                        alt="从“土猪拱白菜”看什么是阶级">
                                 </div>
                                 <!-- Post Excerpt -->
                                 <p>衡水中学张锡峰同学自“土猪拱白菜”引发的争议正在继续发酵。高考结束后，父母开汽车来接他同样引发了激烈的讨论。
@@ -349,12 +349,12 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Commentary</a>
                                 </div>
-                                <h4 class="font-pt">社论：记一次有必要的失误——由成都四十九中事件所想到的</h4>
+                                <h4 class="font-pt">记一次有必要的失误——由成都四十九中事件所想到的</h4>
                                 <p class="gazette-post-date">2021年5月17日</p>
                                 <!-- Post Thumbnail -->
                                 <div class="blog-post-thumbnail my-5">
                                     <img src="img/NO%2049_Scene.png" style="max-height: 250px; width: auto;"
-                                        alt="社论：记一次有必要的失误——由成都四十九中事件所想到的">
+                                        alt="记一次有必要的失误——由成都四十九中事件所想到的">
                                 </div>
                                 <!-- Post Excerpt -->
                                 <p>所以，在49中事件以后，我更加坚定地认为： 关心同胞的尊严并没有错，关心社会正义更不是“境外势力”的代名词。
