--- a/recreation/jiangsu-fc-stopped.html
+++ b/recreation/jiangsu-fc-stopped.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>中超冠军季前停摆，金元足球弊端尽显</title>
+    <title>麦迪讯 | 中超冠军季前停摆，金元足球弊端尽显</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="../img/core-img/logo.jpg">
@@ -164,7 +164,6 @@
             </div>
         </div>
 
-
         <!-- Bottom Header Area -->
         <div class="bottom-header">
             <div class="container h-100">
@@ -172,35 +171,40 @@
                     <div class="col-12">
                         <div class="main-menu">
                             <nav class="navbar navbar-expand-lg">
-                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#gazetteMenu" aria-controls="gazetteMenu" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i> Menu</button>
+                                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                    data-target="#gazetteMenu" aria-controls="gazetteMenu" aria-expanded="false"
+                                    aria-label="Toggle navigation"><i class="fa fa-bars"></i> Menu</button>
                                 <div class="collapse navbar-collapse" id="gazetteMenu">
                                     <ul class="navbar-nav mr-auto">
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">目录 Pages</a>
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                                role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">目录 Pages</a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item" href="../index.html">首页 Home</a>
                                                 <a class="dropdown-item" href="../category.html">分类 Category</a>
-                                                <a class="dropdown-item" href="../about-us.html">介绍 About</a>
-                                                <a class="dropdown-item" href="../contact.html">平台 Platform</a>
+                                                <a class="dropdown-item" href="../about.html">介绍 About</a>
+                                                <a class="dropdown-item" href="../platform.html">平台 Platform</a>
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../politics/the_eighteenth_brumaire_of_donald_trump_1.html">政治 Politics</a>
+                                            <a class='nav-link' href='../politics/category.html'>政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../business/single-post.html">财经 Business</a>
+                                            <a class="nav-link" href="../business/category.html">财经 Business</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../society/Tokyo_Olympics.html">社会 Society</a>
+                                            <a class="nav-link" href="../society/category.html">社会 Society</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../tech/Covid_Vaccine_Comparison.html">科技 Tech</a>
+                                            <a class="nav-link" href="../tech/category.html">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../sport/Chinese_Women_Football.html">文体 Recreation</a>
+                                            <a class="nav-link" href="../recreation/category.html">文体 Recreation</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../news/single-post.html">新闻评论 Commentary</a>
+                                            <a class="nav-link" href="../commentary/category.html">新闻评论
+                                                Commentary</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
@@ -209,7 +213,9 @@
                                     <!-- Search Form -->
                                     <div class="header-search-form mr-auto">
                                         <form action="#">
-                                            <input type="search" placeholder="Input your keyword then press enter..." id="search" name="search">
+                                            <input type="search"
+                                                placeholder="Input your keyword then press enter..." id="search"
+                                                name="search">
                                             <input class="d-none" type="submit" value="submit">
                                         </form>
                                     </div>
@@ -227,26 +233,26 @@
     </header>
     <!-- Header Area End -->
 
-    <section class="single-post-area">
-        <!-- Single Post Title -->
-        <div class="single-post-title bg-img background-overlay" style="background-image: url(img/0.jpg);">
-            <div class="container h-100">
-                <div class="row h-100 align-items-end">
-                    <div class="col-12">
-                        <div class="single-post-title-content">
-                            <!-- Post Tag -->
-                            <div class="gazette-post-tag">
-                                <a href="#">Society</a>
+
+        <section class="single-post-area">
+            <!-- Single Post Title -->
+            <div class="single-post-title bg-img background-overlay" style="background-image: url(../img/bg-img/recreation_bg.png);">
+                <div class="container h-100">
+                    <div class="row h-100 align-items-end">
+                        <div class="col-12">
+                            <div class="single-post-title-content">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Recreation</a>
+                                </div>
+                                <h2 class="font-pt">中超冠军季前停摆，金源足球弊端尽显</h2>
+                                <p>March 7, 2021</p>
+                                <p>冬薯夏瓜 2021年3月7日</p>
                             </div>
-                            <p style="font-size: 30px"><b>麦迪讯体育专栏第一期</b></p>
-                            <h2 class="font-pt">中超冠军季前停摆，金源足球弊端尽显</h2>
-                            <p>March 7, 2021</p>
-                            <p>冬薯夏瓜 2021年3月7日</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
         <div class="single-post-contents">
             <div class="container">
@@ -353,20 +359,6 @@
                             <p style="color:grey"><i>消息来源：天眼查、新华网、体坛周报微信公众号等</i></p>
                         </div>
                     </div>
-
-                    <div class="col-12 col-md-8">
-                        <div class="single-post-text">
-                            <br />
-                            <br />
-                            <hr />
-                            <p><b style="font-size:30px">往期体育专栏 </b> 作者：冬薯夏瓜</p>
-                            <p><a href="FC_Neutral_Name.html" style="color:blue" target="_blank" title="在新标签页打开另一期体育专栏">
-                                    第二期：“改中性名”风波暂告结束，中国足俱改革长路漫漫</a></p>
-                            <p><a href="Chinese_Women_Football.html" style="color:blue" target="_blank" title="在新标签页打开另一期体育专栏">
-                                    第三期：触目惊心的数据：铿锵玫瑰值得关注，女足联赛更需发展</a></p>
-                        </div>
-                    </div>
-
 
                 </div>
             </div>
