--- a/recreation/chinese-women-football.html
+++ b/recreation/chinese-women-football.html
@@ -163,7 +163,6 @@
                 </div>
             </div>
         </div>
-        
         <!-- Bottom Header Area -->
         <div class="bottom-header">
             <div class="container h-100">
@@ -171,35 +170,40 @@
                     <div class="col-12">
                         <div class="main-menu">
                             <nav class="navbar navbar-expand-lg">
-                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#gazetteMenu" aria-controls="gazetteMenu" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i> Menu</button>
+                                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                    data-target="#gazetteMenu" aria-controls="gazetteMenu" aria-expanded="false"
+                                    aria-label="Toggle navigation"><i class="fa fa-bars"></i> Menu</button>
                                 <div class="collapse navbar-collapse" id="gazetteMenu">
                                     <ul class="navbar-nav mr-auto">
                                         <li class="nav-item dropdown">
-                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">目录 Pages</a>
+                                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                                role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                aria-expanded="false">目录 Pages</a>
                                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                 <a class="dropdown-item" href="../index.html">首页 Home</a>
                                                 <a class="dropdown-item" href="../category.html">分类 Category</a>
-                                                <a class="dropdown-item" href="../about-us.html">介绍 About</a>
-                                                <a class="dropdown-item" href="../contact.html">平台 Platform</a>
+                                                <a class="dropdown-item" href="../about.html">介绍 About</a>
+                                                <a class="dropdown-item" href="../platform.html">平台 Platform</a>
                                             </div>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../politics/the_eighteenth_brumaire_of_donald_trump_1.html">政治 Politics</a>
+                                            <a class='nav-link' href='../politics/category.html'>政治 Politics</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../business/single-post.html">财经 Business</a>
+                                            <a class="nav-link" href="../business/category.html">财经 Business</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../society/Tokyo_Olympics.html">社会 Society</a>
+                                            <a class="nav-link" href="../society/category.html">社会 Society</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../tech/Covid_Vaccine_Comparison.html">科技 Tech</a>
+                                            <a class="nav-link" href="../tech/category.html">科技 Tech</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../sport/Chinese_Women_Football.html">文体 Recreation</a>
+                                            <a class="nav-link" href="../recreation/category.html">文体 Recreation</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="../news/single-post.html">新闻评论 Commentary</a>
+                                            <a class="nav-link" href="../commentary/category.html">新闻评论
+                                                Commentary</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
@@ -208,7 +212,9 @@
                                     <!-- Search Form -->
                                     <div class="header-search-form mr-auto">
                                         <form action="#">
-                                            <input type="search" placeholder="Input your keyword then press enter..." id="search" name="search">
+                                            <input type="search"
+                                                placeholder="Input your keyword then press enter..." id="search"
+                                                name="search">
                                             <input class="d-none" type="submit" value="submit">
                                         </form>
                                     </div>
@@ -386,20 +392,6 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-8">
-                        <div class="single-post-text">
-                            <br />
-                            <br />
-                            <hr />
-                            <p><b style="font-size:30px">往期体育专栏 </b> 作者：冬薯夏瓜</p>
-                            <p><a href="Jiangsu_FC_Stopped.html" style="color:blue" target="_blank" title="在新标签页打开另一期体育专栏">
-                                    第一期：中超冠军季前停摆，金元足球弊端尽显</a></p>
-                            <p><a href="FC_Neutral_Name.html" style="color:blue" target="_blank" title="在新标签页打开另一期体育专栏">
-                                    第二期：“改中性名”风波暂告结束，中国足俱改革长路漫漫</a></p>
-                        </div>
-                    </div>
-
-
                 </div>
             </div>
         </div>
@@ -412,7 +404,7 @@
                     <!-- Comment Area Start -->
                     <div class="comment_area section_padding_50 clearfix">
                         <div class="gazette-heading">
-                            <h4 class="font-bold">Discussion</h4>
+                            <h4 class="font-bold">评论区</h4>
                         </div>
 
                         <ol>
@@ -425,13 +417,10 @@
                                     </div>
                                     <!-- Comment Content -->
                                     <div class="comment-content">
-                                        <h5>John Doe</h5>
-                                        <span class="comment-date font-pt">December 18, 2017</span>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                                            dictum nunc libero, vitae rutrum nunc porta id. Interdum et
-                                            malesuada fames ac ante ipsum primis in faucibus. Nam arcu
-                                            augue, semper at elementum nec, cursus nec ante.</p>
-                                        <a class="reply-btn" href="#">Reply <i class="fa fa-reply" aria-hidden="true"></i></a>
+                                        <h5>用户甲</h5>
+                                        <span class="comment-date font-pt text-muted">December 18, 2017</span>
+                                        <p>来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论，来自用户甲的评论。</p>
+                                        <a class="reply-btn" href="#">回复 <i class="fa fa-reply" aria-hidden="true"></i></a>
                                     </div>
                                 </div>
                                 <ol class="children">
@@ -439,18 +428,14 @@
                                         <div class="comment-wrapper d-md-flex align-items-start">
                                             <!-- Comment Meta -->
                                             <div class="comment-author">
-                                                <img src="img/blog-img/25.jpg" alt="">
+                                                <img src="../img/blog-img/dm-3.jpg" alt="">
                                             </div>
                                             <!-- Comment Content -->
                                             <div class="comment-content">
-                                                <h5>John Doe</h5>
-                                                <span class="comment-date text-muted">December 18, 2017</span>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                    elit. Sed dictum nunc libero, vitae rutrum nunc
-                                                    porta id. Interdum et malesuada fames ac ante ipsum
-                                                    primis in faucibus. Nam arcu augue, semper at
-                                                    elementum nec, cursus nec ante.</p>
-                                                <a class="reply-btn" href="#">Reply <i class="fa fa-reply" aria-hidden="true"></i></a>
+                                                <h5>用户乙</h5>
+                                                <span class="comment-date font-pt text-muted">December 18, 2017</span>
+                                                <p>来自用户乙的评论，来自用户乙的评论，来自用户乙的评论，来自用户乙的评论，来自用户乙的评论，来自用户乙的评论，来自用户乙的评论。</p>
+                                                <a class="reply-btn" href="#">回复 <i class="fa fa-reply" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </li>
@@ -462,20 +447,20 @@
                     <div class="leave-comment-area clearfix">
                         <div class="comment-form">
                             <div class="gazette-heading">
-                                <h4 class="font-bold">leave a comment</h4>
+                                <h4 class="font-bold">留言板</h4>
                             </div>
                             <!-- Comment Form -->
                             <form action="#" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="contact-name" placeholder="Enter Your Full Name">
+                                    <input type="text" class="form-control" id="contact-name" placeholder="您的姓名">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" id="contact-email" placeholder="Email">
+                                    <input type="email" class="form-control" id="contact-email" placeholder="您的邮箱">
                                 </div>
                                 <div class="form-group">
-                                    <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                                    <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="您的评论"></textarea>
                                 </div>
-                                <button type="submit" class="btn leave-comment-btn">SUBMIT <i class="fa fa-angle-right ml-2"></i></button>
+                                <button type="submit" class="btn leave-comment-btn">提交评论<i class="fa fa-angle-right ml-2"></i></button>
                             </form>
                         </div>
                     </div>
@@ -483,6 +468,8 @@
             </div>
         </div>
     </section>
+
+
     <!-- Footer Area Start -->
     <footer class="footer-area bg-img background-overlay" style="background-image: url(../img/bg-img/footer_bg.jpg);">
         <!-- Top Footer Area -->
@@ -561,6 +548,8 @@
         </div>
     </footer>
     <!-- Footer Area End -->
+
+
     <!-- jQuery (Necessary for All JavaScript Plugins) -->
     <script src="../js/jquery/jquery-2.2.4.min.js"></script>
     <!-- Popper js -->
