--- a/tech/category.html
+++ b/tech/category.html
@@ -277,7 +277,7 @@
                                 <!-- Reading More -->
                                 <div class="post-continue-reading-share mt-30">
                                     <div class="post-continue-btn">
-                                        <a href="tech/Covid_Vaccine_Comparison.html" class="font-pt" target="_blank"
+                                        <a href="trad-chinese-med_covid.html" class="font-pt" target="_blank"
                                             title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
                                                 aria-hidden="true"></i></a>
                                     </div>
@@ -304,7 +304,7 @@
                                 <!-- Reading More -->
                                 <div class="post-continue-reading-share mt-30">
                                     <div class="post-continue-btn">
-                                        <a href="recreation/Chinese_Women_Football.html" class="font-pt" target="_blank"
+                                        <a href="covid-vaccine-comparison.html" class="font-pt" target="_blank"
                                             title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
                                                 aria-hidden="true"></i></a>
                                     </div>
