Index page update (not finished yet)

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
         <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
         <!-- Title  -->
-        <title>麦迪讯 | 关于我们 About Us</title>
+        <title>麦迪讯 | 关于我们 About</title>
 
         <!-- Favicon  -->
         <link rel="icon" href="img/core-img/logo.jpg">
@@ -286,7 +286,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="breacumb-content d-flex align-items-center justify-content-between">
-                            <h3 class="font-pt mb-0">关于我们 About Us</h3>
+                            <h3 class="font-pt mb-0">关于我们 About</h3>
                         </div>
                     </div>
                 </div>
