--- a/category.html
+++ b/category.html
@@ -229,70 +229,22 @@
                 </div>
             </div>
         </header>
-        <!-- Header Area End -->
+        <!-- Header Area End -->        
 
-        <!-- Editorial Area Start -->
-        <section class="gazatte-editorial-area section_padding_100 bg-dark">
+        <!-- Breadcumb Area Start -->
+        <div>
+            <div class="breadcumb-area section_padding_50">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="editorial-post-slides owl-carousel">
-
-                            <!-- Editorial Post Single Slide -->
-                            <div class="editorial-post-single-slide">
-                                <div class="row">
-                                    <div class="col-12 col-md-5">
-                                        <div class="editorial-post-thumb">
-                                            <a href="about-us.html" class="font-pt mb-15"><img
-                                                    src="img/members-img/group1.jpg"
-                                                    style="max-height: 250px; width: auto;" alt="关于我们"></a>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 col-md-7">
-                                        <div class="editorial-post-content">
-                                            <!-- Post Tag -->
-                                            <h3><a href="about.html" class="font-pt mb-15" style="color:white">关于我们</a>
-                                            </h3>
-                                            <p class="editorial-post-date mb-15">2019 - 2021</p>
-                                            <p style="color:grey">
-                                                麦迪讯成立于2019年秋季，是一个开放，包容，和谐，奋进的新媒体社团。目前我们社团的公众号关注人数已经达到三千人以上。我们社团成立的初衷是为了服务麦迪逊当地的华人学生，为他们带来本地和国际的要闻。随着麦迪讯的发展，我们涉及的领域不断扩大。
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Editorial Post Single Slide -->
-                            <div class="editorial-post-single-slide">
-                                <div class="row">
-                                    <div class="col-12 col-md-5">
-                                        <div class="editorial-post-thumb">
-                                            <a href="platform.html" class="font-pt mb-15"><img
-                                                    src="img\core-img\media.png" style="max-height: 250px; width: auto;"
-                                                    alt="平台介绍"></a>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 col-md-7">
-                                        <div class="editorial-post-content">
-                                            <!-- Post Tag -->
-                                            <h3><a href="about-us.html" class="font-pt mb-15"
-                                                    style="color:white">平台介绍</a></h3>
-                                            <p class="editorial-post-date mb-15">2019 - 2021</p>
-                                            <p style="color:grey">
-                                                作为一个不断壮大的新媒体平台，我们现在立志于分享留学生的观点，增进中美年轻人之间的相互理解。现在我们社团已经包含了微信公众号，Facebook，BiliBili，喜马拉雅等平台，并且囊括了麦迪讯，新闻简讯，专栏，读书会等栏目，内容也从时事政治扩大到了金融，文学等领域。
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-
+                        <div class="breacumb-content d-flex align-items-center justify-content-between">
+                            <h3 class="font-pt mb-0">文章分类 Category</h3>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Editorial Area End -->
+        </div>
+        <!-- Breadcumb Area End -->
 
         <section class="catagory-welcome-post-area section_padding_100">
             <div class="container">
