Update of videos on index page

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                 <div class="col-12 col-md-5">
                                     <div class="editorial-post-thumb">
                                         <a href="about-us.html" class="font-pt mb-15"><img
-                                                src="img/members-img/group1.jpg"
+                                                src="img\core-img\welcome.jpg"
                                                 style="max-height: 250px; width: auto;" alt="关于我们"></a>
                                     </div>
                                 </div>
@@ -249,7 +249,7 @@
                                         </h3>
                                         <p class="editorial-post-date mb-15">Welcome to Madnews!</p>
                                         <p style="color:grey">
-                                            (新加一段欢迎词）
+                                            (新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。新加一段欢迎词。）
                                         </p>
                                     </div>
                                 </div>
@@ -321,7 +321,7 @@
 
                     <div class="gazette-todays-post">
                         <div class="gazette-heading">
-                            <h4>today’s most popular</h4>
+                            <h4>精彩推荐 Featured Articles</h4>
                         </div>
 
                         <!-- Single Today Post -->
@@ -383,7 +383,7 @@
                         <!-- Breaking News Widget -->
                         <div class="breaking-news-widget">
                             <div class="widget-title">
-                                <h5>breaking news</h5>
+                                <h5>近期更新 Recent Updates</h5>
                             </div>
                             <!-- Single Breaking News Widget -->
                             <div class="single-breaking-news-widget">
@@ -392,7 +392,7 @@
                                     <p>breaking news</p>
                                 </div>
                                 <div class="breaking-news-heading gradient-background-overlay">
-                                    <h5 class="font-pt">China leads new global skyscraper record</h5>
+                                    <h5 class="font-pt" >China leads new global skyscraper record</h5>
                                 </div>
                             </div>
                             <!-- Single Breaking News Widget -->
@@ -410,7 +410,7 @@
                         <!-- Don't Miss Widget -->
                         <div class="donnot-miss-widget">
                             <div class="widget-title">
-                                <h5>Don't miss</h5>
+                                <h5>本地动态 Local News</h5>
                             </div>
                             <!-- Single Don't Miss Post -->
                             <div class="single-dont-miss-post d-flex mb-30">
@@ -459,80 +459,80 @@
                 <div class="col-12 col-md-3">
                     <div class="single-video-post">
                         <div class="video-post-thumb">
-                            <img src="img/blog-img/4.jpg" alt="">
-                            <a href="https://youtu.be/dIyXl9ZHEgg" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
+                            <img src="img/media-img/bilibili1.webp" alt="">
+                            <a href="https://www.bilibili.com/video/BV1nf4y1i7vY?spm_id_from=333.999.0.0" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
                         </div>
-                        <h5><a href="#">Show suspended by PBS amid misconduct allegations</a></h5>
+                        <h5><a href="https://www.bilibili.com/video/BV1nf4y1i7vY?spm_id_from=333.999.0.0">【Bilibili】麦迪讯-中国近代史读书会</a></h5>
                     </div>
                 </div>
                 <!-- Single Video Post Start -->
                 <div class="col-12 col-md-3">
                     <div class="single-video-post">
                         <div class="video-post-thumb">
-                            <img src="img/blog-img/5.jpg" alt="">
-                            <a href="https://youtu.be/dIyXl9ZHEgg" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
+                            <img src="img/media-img/bilibili2.webp" alt="">
+                            <a href="https://www.bilibili.com/video/BV1GK411c7Wh?spm_id_from=333.999.0.0" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
                         </div>
-                        <h5><a href="#">Parents to Congress</a></h5>
+                        <h5><a href="https://www.bilibili.com/video/BV1GK411c7Wh?spm_id_from=333.999.0.0">【Bilibili】解读赫尔岑《往事与随想》第六章</a></h5>
                     </div>
                 </div>
                 <!-- Single Video Post Start -->
                 <div class="col-12 col-md-3">
                     <div class="single-video-post">
                         <div class="video-post-thumb">
-                            <img src="img/blog-img/6.jpg" alt="">
-                            <a href="https://youtu.be/dIyXl9ZHEgg" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
+                            <img src="img/media-img/ximalaya1.jpg" alt="">
+                            <a href="https://www.ximalaya.com/renwen/38918208/" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
                         </div>
-                        <h5><a href="#">Third Buy Alert for This “Millionaire Maker” Stock</a></h5>
+                        <h5><a href="https://www.ximalaya.com/renwen/38918208/">【喜马拉雅】品《1984》</a></h5>
                     </div>
                 </div>
                 <!-- Single Video Post Start -->
                 <div class="col-12 col-md-3">
                     <div class="single-video-post">
                         <div class="video-post-thumb">
-                            <img src="img/blog-img/7.jpg" alt="">
-                            <a href="https://youtu.be/dIyXl9ZHEgg" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
+                            <img src="img/media-img/ximalaya2.jpg" alt="">
+                            <a href="https://www.ximalaya.com/renwen/38719502/" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
                         </div>
-                        <h5><a href="#">The Chicago Mercantile Exchange is set to begin</a></h5>
+                        <h5><a href="https://www.ximalaya.com/renwen/38719502/">【喜马拉雅】读书会：《震撼世界的十天》</a></h5>
                     </div>
                 </div>
                 <!-- Single Video Post Start -->
                 <div class="col-12 col-md-3">
                     <div class="single-video-post">
                         <div class="video-post-thumb">
-                            <img src="img/blog-img/8.jpg" alt="">
-                            <a href="https://youtu.be/dIyXl9ZHEgg" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
+                            <img src="img/media-img/youtube1.webp" alt="">
+                            <a href="https://www.youtube.com/watch?v=w65XGPOls8Q" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
                         </div>
-                        <h5><a href="#">Trading bitcoin futures</a></h5>
+                        <h5><a href="https://www.youtube.com/watch?v=w65XGPOls8Q">【YouTube】麦迪讯读书会第二期——娜拉之论</a></h5>
                     </div>
                 </div>
                 <!-- Single Video Post Start -->
                 <div class="col-12 col-md-3">
                     <div class="single-video-post">
                         <div class="video-post-thumb">
-                            <img src="img/blog-img/9.jpg" alt="">
-                            <a href="https://youtu.be/dIyXl9ZHEgg" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
+                            <img src="img/media-img/youtube2.webp" alt="">
+                            <a href="https://www.youtube.com/watch?v=uQOyWgQaBEk" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
                         </div>
-                        <h5><a href="#">Are ‘Micro-Mansions’ the Next Big Thing?</a></h5>
+                        <h5><a href="https://www.youtube.com/watch?v=uQOyWgQaBEk">【YouTube】麦迪讯座谈会第一期</a></h5>
                     </div>
                 </div>
                 <!-- Single Video Post Start -->
                 <div class="col-12 col-md-3">
                     <div class="single-video-post">
                         <div class="video-post-thumb">
-                            <img src="img/blog-img/10.jpg" alt="">
-                            <a href="https://youtu.be/dIyXl9ZHEgg" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
+                            <img src="img/media-img/youtube3.webp" alt="">
+                            <a href="https://www.youtube.com/watch?v=Tp9OUF4GXw8" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
                         </div>
-                        <h5><a href="#">McKinney’s target market</a></h5>
+                        <h5><a href="https://www.youtube.com/watch?v=Tp9OUF4GXw8">【YouTube】麦迪讯线上沙龙第二期</a></h5>
                     </div>
                 </div>
                 <!-- Single Video Post Start -->
                 <div class="col-12 col-md-3">
                     <div class="single-video-post">
                         <div class="video-post-thumb">
-                            <img src="img/blog-img/11.jpg" alt="">
-                            <a href="https://youtu.be/dIyXl9ZHEgg" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
+                            <img src="img/media-img/youtube4.webp" alt="">
+                            <a href="https://www.youtube.com/watch?v=8HQIzMDByzg" class="videobtn"><i class="fa fa-play" aria-hidden="true"></i></a>
                         </div>
-                        <h5><a href="#">Australian Property Prices Remain Flat</a></h5>
+                        <h5><a href="https://www.youtube.com/watch?v=8HQIzMDByzg">【YouTube】革故鼎新—美国政坛进步派艰难的破局之路</a></h5>
                     </div>
                 </div>
             </div>
